[gd_scene load_steps=7 format=2]

[ext_resource path="res://star-shooter/scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://star-shooter/scenes/DeadFX.tscn" type="PackedScene" id=2]
[ext_resource path="res://star-shooter/scenes/HitFX.tscn" type="PackedScene" id=3]
[ext_resource path="res://star-shooter/scenes/TimerToDie.tscn" type="PackedScene" id=4]
[ext_resource path="res://star-shooter/scenes/Explosion.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

[node name="Enemy" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitFX" parent="." instance=ExtResource( 3 )]

[node name="DeadFX" parent="." instance=ExtResource( 2 )]

[node name="TimerToDie" parent="." instance=ExtResource( 4 )]

[node name="TimerToStopFlashing" type="Timer" parent="."]
wait_time = 0.5

[node name="Explosion" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="TimerToDie" to="." method="_on_TimerToDie_timeout"]
[connection signal="timeout" from="TimerToStopFlashing" to="." method="_on_TimerToStopFlashing_timeout"]
